*
* 0.2.2
*

- Implemented communication session encryption
- Added support for multiple database connections for better performance
- Fixed incorrect 32 bit integer varbinds parsing in libnxsnmp
- Windows console: added simple collected data export


*
* 0.2.1
*

- Server startup procedure improved
- Fixed bug in Windows service shutdown code
- Added ICMP ping subagent
- Server will not collect data from unmanaged nodes
- Added PostgreSQL support under Windows
- NetWare platform subagent improved
- Linux subagent: Implemented all Net.Interface.* parameters except
  Net.Interface.Speed
- Fixed crash in Microsoft SQL driver caused by unsuccessful connection
- More SNMP MIBs added
- Fixed issue #27 (poller threads deadlock)
- Server's internal synchronization mechanisms improved
- Added driver for generic GSM modems
- SMS driver can be configured from server configuration wizard
- Windows console:
	- Action properties dialog improved
	- Sorting implemented in data collection editor
	- Object browser window can be saved in desktop configuration
- Windows alarm viewer:
	- Added autologin feature
	- UI appearance improved


*
* 0.2.0
*

- Windows installer improved
- Fixed build issues on various platforms
- Windows console:
	- Items in Control Panel now sorted alphabetically
	- Data collection editor now shows associated template for DCI
	- Added automatic refresh to last values view
	- Rule in policy editor can be enabled/disabled by double click
	  on leftmost column (rule number)
- Fixed incorrect interface detection on FreeBSD


*
* 0.1.20
*

- Implemented object unbinding from administrator console
- Implemented template removing
- Added "Change IP address" function for node objects
- Added Oracle support (via ODBC driver)
- Added server installation program (Windows only)
- Added server configuration wizard (Windows only)
- SNMP agent connectivity check improved
- Added special handling for CheckPoint SNMP agent